--- a/LanguageSnippets.Models/LanguageSnippets.Models.csproj
+++ b/LanguageSnippets.Models/LanguageSnippets.Models.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnippetListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
