Mod 7 plus add Contracts

--- a/LanguageSnippets.Contracts/LanguageSnippets.Contracts.csproj
+++ b/LanguageSnippets.Contracts/LanguageSnippets.Contracts.csproj
@@ -53,11 +53,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISnippetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LanguageSnippets.Models\LanguageSnippets.Models.csproj">
+      <Project>{B077F790-3CD9-4D95-870C-BF1A27B771E2}</Project>
+      <Name>LanguageSnippets.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
