--- a/LanguageSnippets.Data/LanguageSnippets.Data.csproj
+++ b/LanguageSnippets.Data/LanguageSnippets.Data.csproj
@@ -54,13 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IdentityModels.cs" />
-    <Compile Include="Migrations\201712062150199_AddSnippetEntity.cs" />
-    <Compile Include="Migrations\201712062150199_AddSnippetEntity.Designer.cs">
-      <DependentUpon>201712062150199_AddSnippetEntity.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201712062231229_AddedIsStarredColumn.cs" />
-    <Compile Include="Migrations\201712062231229_AddedIsStarredColumn.Designer.cs">
-      <DependentUpon>201712062231229_AddedIsStarredColumn.cs</DependentUpon>
+    <Compile Include="Migrations\201712071901565_initial.cs" />
+    <Compile Include="Migrations\201712071901565_initial.Designer.cs">
+      <DependentUpon>201712071901565_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -77,11 +73,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201712062150199_AddSnippetEntity.resx">
-      <DependentUpon>201712062150199_AddSnippetEntity.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201712062231229_AddedIsStarredColumn.resx">
-      <DependentUpon>201712062231229_AddedIsStarredColumn.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201712071901565_initial.resx">
+      <DependentUpon>201712071901565_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
