--- a/LanguageSnippets.Models/LanguageSnippets.Models.csproj
+++ b/LanguageSnippets.Models/LanguageSnippets.Models.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnippetCreate.cs" />
+    <Compile Include="SnippetDetail.cs" />
     <Compile Include="SnippetListItem.cs" />
   </ItemGroup>
   <ItemGroup>
