Error with Edit function

--- a/LanguageSnippets.Models/LanguageSnippets.Models.csproj
+++ b/LanguageSnippets.Models/LanguageSnippets.Models.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnippetCreate.cs" />
     <Compile Include="SnippetDetail.cs" />
+    <Compile Include="SnippetEdit.cs" />
     <Compile Include="SnippetListItem.cs" />
   </ItemGroup>
   <ItemGroup>
