--- a/LanguageSnippets.Web/LanguageSnippets.Web.csproj
+++ b/LanguageSnippets.Web/LanguageSnippets.Web.csproj
@@ -261,6 +261,7 @@
     <Content Include="Views\Snippet\Create.cshtml" />
     <Content Include="Views\Snippet\Index.cshtml" />
     <Content Include="Views\Snippet\Details.cshtml" />
+    <Content Include="Views\Snippet\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
