--- a/LanguageSnippets.Web/LanguageSnippets.Web.csproj
+++ b/LanguageSnippets.Web/LanguageSnippets.Web.csproj
@@ -263,6 +263,7 @@
     <Content Include="Views\Snippet\Details.cshtml" />
     <Content Include="Views\Snippet\Edit.cshtml" />
     <Content Include="Views\Snippet\Delete.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DateTimeOffset.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
