--- a/LanguageSnippets.API/LanguageSnippets.API.csproj
+++ b/LanguageSnippets.API/LanguageSnippets.API.csproj
@@ -229,13 +229,13 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SnippetController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -313,6 +313,20 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LanguageSnippets.Data\LanguageSnippets.Data.csproj">
+      <Project>{9d7feb75-d56c-44de-9243-909447f40a96}</Project>
+      <Name>LanguageSnippets.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LanguageSnippets.Models\LanguageSnippets.Models.csproj">
+      <Project>{b077f790-3cd9-4d95-870c-bf1a27b771e2}</Project>
+      <Name>LanguageSnippets.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LanguageSnippets.Services\LanguageSnippets.Services.csproj">
+      <Project>{53ba6e12-923e-4259-8424-c5c51a66e353}</Project>
+      <Name>LanguageSnippets.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
